--- a/templates/tracconfig.erb
+++ b/templates/tracconfig.erb
@@ -1,30 +1,50 @@
-[wiki]
-ignore_missing_pages = false
-split_page_names = true
-default_lang = en
+# -*- coding: utf-8 -*-
 
-[changeset] 
+[account-manager]
+password_file = /etc/apache2/writeable-auth/trac
+password_store = HtPasswdStore
+
+[attachment]
+max_size = 262144
+render_unsafe_content = false
+
+[browser]
+downloadable_paths = /trunk, /branches/*, /tags/*
+hide_properties = svk:merge
+
+[changeset]
 max_diff_bytes = 10000000
-wiki_format_messages = true
 max_diff_files = 0
-<% if navadd %>
-[navadd]
-add_items = reports, simpleticket
-reports.target = mainnav
-reports.title = Tickets
-reports.url = /trac/<%=name%>/wiki/Reports
-simpleticket.target = mainnav
-simpleticket.title = New Ticket
-simpleticket.url = /trac/<%=name%>/simpleticket
-<% end %>
-[search]
-min_query_length = 3
+wiki_format_messages = true
+
+[components]
+acct_mgr.admin.accountmanageradminpage = enabled
+acct_mgr.api.accountmanager = enabled
+acct_mgr.htfile.htpasswdstore = enabled
+acct_mgr.web_ui.accountmodule = enabled
+acct_mgr.web_ui.loginmodule = enabled
+acct_mgr.web_ui.registrationmodule = enabled
+gitplugin.* = enabled
+navadd.* = enabled
+navhider.* = enabled
+simpleticket.* = enabled
+trac.web.auth.loginmodule = enabled
+trac.wiki.web_ui.wikimodule = enabled
+tracbzr.* = enabled
+tracnav.* = enabled
+tractags.* = enabled
+webadmin.* = enabled
+wikinegotiator.* = enabled
+wikinotification.* = enabled
+
+[diff]
+tab_width = 8
 
 [header_logo]
-src = <%= logo %>
 alt = <%= alt %>
 height = 73
-link = <%= link %>
+link = <%= url %>/<%= name %>
+src = <%= url %>/logo.png
 width = 236
 
 [logging]
@@ -32,149 +52,128 @@ log_file = trac.log
 log_level = DEBUG
 log_type = none
 
-[trac]
-default_charset = iso-8859-15
-ignore_auth_case = false
-permission_store = DefaultPermissionStore
-check_auth_ip = true
-authz_module_name = 
-base_url = <%= link %>
-htdocs_location =
-request_filters = None
-<% if navadd %>
-mainnav = wiki,timeline,browser,reports,-tickets,-newticket,simpleticket,search,-roadmap
-metanav = -about,login,logout,settings
-<% else %>
-metanav = login,logout,settings,help,about
-<% end %>
-authz_file =  
-templates_dir = <%= templates %>
-repository_dir = <%= repo %>
-repository_type = <%= repostype %>
-htdocs_location = /tracdocs/
-database = <%= db %>
-default_handler = TagsWikiModule
-
-[notification]
-smtp_enabled = true
-smtp_replyto = <%= replyto %>
-smtp_always_cc = <%= cc %>
-smtp_server = <%= smtpserver %>
-smtp_from = <%= from %>
-smtp_server = localhost
-smtp_port = 25
-smtp_password =
-always_notify_owner = true
-always_notify_reporter = true
-use_tls = false
-smtp_always_bcc =
-mime_encoding = base64
-use_public_cc = false
-smtp_user =
-use_short_addr = false
-smtp_default_domain =
-
-[project]
-url = <%= url %>
-footer =  Visit the Trac open source project at<br /><a href="http://trac.edgewall.com/">http://trac.edgewall.com/</a>
-name = <%= name %>
-descr = <%= description %>
-icon = <%= url %>/favicon.ico
-
 [mimeviewer]
 enscript_modes = text/x-dylan:dylan:4
-max_preview_size = 262144
-php_path = php
 enscript_path = enscript
-silvercity_modes =
+max_preview_size = 262144
 mime_map = text/x-dylan:dylan,text/x-idl:ice,text/x-ada:ads:adb
+php_path = php
+silvercity_modes = 
 tab_width = 8
 
-[attachment]
-render_unsafe_content = false
-max_size = 262144
+[notification]
+always_notify_owner = true
+always_notify_reporter = true
+mime_encoding = base64
+smtp_always_bcc = 
+smtp_always_cc = <%= cc %>
+smtp_default_domain = 
+smtp_enabled = true
+smtp_from = <%= from %>
+smtp_password = 
+smtp_port = 25
+smtp_replyto = <%= replyto %>
+smtp_server = <%= smtpserver %>
+smtp_user = 
+use_public_cc = false
+use_short_addr = false
+use_tls = false
 
-[timeline]
-changeset_show_files = 0
-ticket_show_details = false
-default_daysback = 30
-changeset_long_messages = false
+[project]
+descr = <%= description %>
+footer = Visit the Trac open source project at<br /><a href="http://trac.edgewall.com/">http://trac.edgewall.com/</a>
+icon = <%= url %>/favicon.ico
+name = <%= name %>
+url = <%= url %>
 
-[diff]
-tab_width = 8
+[search]
+min_query_length = 3
+
+[simpleticket]
+hide = stage,complexity,compatibility,approval,milestone,severity,priority,specification,owner
 
 [ticket]
-default_version =
-default_severity = normal
 default_component = library
+default_milestone = 
 default_priority = normal
-default_milestone =
+default_severity = normal
+default_version = 
 restrict_owner = false
 
-[browser]
-hide_properties = svk:merge
-downloadable_paths = /trunk, /branches/*, /tags/*
-
-[components]
-acct_mgr.admin.AccountManagerAdminPage = enabled
-acct_mgr.api.accountmanager = enabled
-acct_mgr.htfile.HtPasswdStore = enabled
-acct_mgr.web_ui.AccountModule = enabled
-acct_mgr.web_ui.LoginModule = enabled
-acct_mgr.web_ui.RegistrationModule = enabled
-trac.web.auth.LoginModule = disabled
-trac.wiki.web_ui.wikimodule = disabled
-tractags.* = enabled
-webadmin.* = enabled
-tracnav.* = enabled
-wikinotification.* = enabled
-wikinegotiator.* = enabled
-simpleticket.* = enabled
-navadd.* = enabled
-navhider.* = enabled
-tracbzr.* = enabled
-gitplugin.* = enabled
-
-[account-manager]
-password_store = HtPasswdStore
-password_file = /etc/apache2/writeable-auth/trac
-
 [ticket-custom]
+approval = select
+approval.label = State of Approval
+approval.options = Unnecessary|Proposed|For|Against|Approved|Denied
+approval.order = 15
+approval.value = 0
+compatibility = select
+compatibility.label = Compatibility
+compatibility.options = Unknown|Full|Limited|Breaks
+compatibility.order = 30
+compatibility.value = 0
+complexity = select
+complexity.label = Complexity
+complexity.options = Unknown|Trivial|Easy|Medium|Hard
+complexity.order = 25
+complexity.value = 0
+patch = select
+patch.label = Attached Patches
+patch.options = None|Code|Tests|Insufficient
+patch.order = 20
+patch.value = 0
+specification = select
+specification.label = Specification
+specification.options = Unnecessary|None|Initial|Complete
+specification.order = 35
+specification.value = 0
 stage = select
 stage.label = Triage Stage
 stage.options = Unreviewed|Needs more info|Needs design decision|Accepted|Ready for checkin
 stage.order = 5
 stage.value = 0
 
-approval = select
-approval.label = State of Approval
-approval.options = Unnecessary|Proposed|For|Against|Approved|Denied
-approval.order = 15
-approval.value = 0
+[ticket-workflow]
+accept = new -> assigned
+accept.operations = set_owner_to_self
+accept.permissions = TICKET_MODIFY
+leave = * -> *
+leave.default = 1
+leave.operations = leave_status
+reassign = new,assigned,reopened -> new
+reassign.operations = set_owner
+reassign.permissions = TICKET_MODIFY
+reopen = closed -> reopened
+reopen.operations = del_resolution
+reopen.permissions = TICKET_CREATE
+resolve = new,assigned,reopened -> closed
+resolve.operations = set_resolution
+resolve.permissions = TICKET_MODIFY
 
-patch = select
-patch.label = Attached Patches
-patch.options = None|Code|Tests|Insufficient
-patch.order = 20
-patch.value = 0
+[timeline]
+changeset_long_messages = false
+changeset_show_files = 0
+default_daysback = 30
+ticket_show_details = false
 
-complexity = select
-complexity.label = Complexity
-complexity.options = Unknown|Trivial|Easy|Medium|Hard
-complexity.order = 25
-complexity.value = 0
+[trac]
+authz_file = 
+authz_module_name = 
+base_url = <%= link %>
+check_auth_ip = true
+database = <%= db %>
+default_charset = iso-8859-15
+default_handler = WikiModule
+htdocs_location = 
+ignore_auth_case = false
+metanav = login,logout,settings,help,about
+permission_store = DefaultPermissionStore
+repository_dir = <%= repo %>
+repository_type = <%= repostype %>
+request_filters = None
+templates_dir = <%= templates %>
 
-compatibility = select
-compatibility.label = Compatibility
-compatibility.options = Unknown|Full|Limited|Breaks
-compatibility.order = 30
-compatibility.value = 0
+[wiki]
+default_lang = en
+ignore_missing_pages = false
+split_page_names = true
 
-specification = select
-specification.label = Specification
-specification.options = Unnecessary|None|Initial|Complete
-specification.order = 35
-specification.value = 0
-
-[simpleticket]
-hide = stage,complexity,compatibility,approval,milestone,severity,priority,specification,owner
